# restcmd

./: CMakeLists.txt  README.md  restcmdConfig.cmake.in
.github/workflows/: dunedaq-develop-cpp-ci.yml
cmake/: restcmdConfig.cmake.in
config/restcmd/: control-services.data.xml
docs/: README.md
include/: RestEndpoint.hpp
include/restcmd/: Issues.hpp  RestEndpoint.hpp
plugins/: restCommandFacility.cpp
scripts/: README.md  example.py  init-example.py  init.json  recv-restcmd.py  send-cmd.py  send-recv-restcmd.py  send-restcmd.py
src/: CallbackTypes.hpp  RequestResult.hpp  RestCommandFacility.cpp  RestEndpoint.cpp  RestEndpoint.hpp  ValidPort.hpp
test/: rest_commanded_object.hpp  test-conf.json  test-init.json  test-start.json  test-stop.json  test_rest_app.cxx
test/apps/: rest_commanded_object.hpp  test_rest_app.cxx
